[package]
name = "roguelike_game"
version = "0.1.0"
authors = ["fighterwing89"]
edition = "2018"

[dependencies]
rltk = { version="0.7.0", features=["serde"] }
specs = { version="0.16.1", features=["serde"] }
specs-derive = "0.4.0"
serde = { version="1.0.93", features=["derive"] }
serde_json = "1.0.39"
